--- a/style.css
+++ b/style.css
@@ -13,10 +13,8 @@ body{
     width: 100%;
     height:auto;
     min-height: 100vh;
-
     background-image: radial-gradient(circle, #FCF6F5,#8AAAE5);
     background-repeat: no-repeat;
-
 }
 
 
@@ -125,6 +123,10 @@ li{
     transition: all 300ms;
     background-color: rgba(154, 154, 154, 0.166);
     border-radius: 20px;
+    margin-right: -30px;
+
+    overflow-wrap:break-word;
+
 }
 
 li:hover{
@@ -163,10 +165,151 @@ li span{
     /* background-color: rebeccapurple; */
     right: 0;
     top: 5px;
+    margin-right: -35px;
     font-size: xx-large;
     transition: all 300ms;
 }
 
 li span:hover{
     scale: 1.4;
+}
+
+
+@media (max-width: 600px ) {
+    
+    body{
+        caret-color: transparent;
+        width: 100%;
+        height:auto;
+        min-height: 100vh;
+        background-image: radial-gradient(circle, #FCF6F5,#8AAAE5);
+        background-repeat: no-repeat;
+    }
+
+    div#root{
+        margin: 8% auto 3% auto;
+        padding: 4.5%;
+        border-radius: 2vw;
+        width: 80%;
+        height: auto;
+        background-color: rgba(255, 255, 255, 0.351);
+    }
+
+    
+    .top-content{
+        display: flex;
+        align-items: center;
+        font-family:Arial, Helvetica, sans-serif;
+        padding: 1%;
+        /* background-color: orange; */
+        margin: 0 0 3% 0;
+        font-size: 1em;
+    }
+
+    .top-content img{
+        margin: auto auto auto 3%;
+        max-width: 10%;
+    }
+
+    .main-content{
+        padding: 2%;
+        /* background-color: black; */
+    }
+
+    .main-content input{
+        width: 90%;
+        padding: 4% 20% 4% 4%;
+        border-radius: 4vw 0 0 4vw;
+        height: 8vh;
+        font-size: x-large;
+        border:2px solid black;
+        background-color: #866C69;
+        caret-color: black;
+        color:rgb(255, 255, 255);
+        transition: all 300ms;
+    }
+
+    .main-content button{
+        position: absolute;
+        width: 15%;
+        margin: 0 0 0 -10%; 
+        font-size: x-large;
+        padding: 2% 4%;
+        border-radius: 6vw;
+        height: 8vh;
+        background-color: #53331F;
+        border:2px solid black;
+        color:white;
+        transition: all 300ms;
+                
+    }
+
+    .bottom-content{
+        border: 1px solid black;
+        padding: 2%;
+        border-radius: 2vw;
+        margin: 4vh;
+    }
+
+    .bottom-title{  
+        color: rgba(74, 44, 44, 0.49);
+        text-align: center;
+        font-size: 1.4rem;
+        transition: all 300ms;
+    }
+
+    li{
+        display: inline-block;
+        width: 75%;
+        position: relative;
+        left:10px;
+        list-style: none;
+        margin: 2vw 6vw;
+        /* background-color: #fff; */
+        font-size: larger;
+        padding:3%;
+        transition: all 300ms;
+        background-color: rgba(154, 154, 154, 0.166);
+        border-radius: 20px;
+        overflow-wrap:break-word;
+    }
+
+    li::before{
+        content: '';
+        width:20px;
+        height: 20px;
+        position:absolute ;
+        left:-30px;
+        top: 10px;
+        border-radius: 50%;
+        background-color: white;
+        background-image: url(images/unchecked.png);
+        background-position: center;
+        background-size: cover;
+    }
+
+    ul li.check{
+        text-decoration: line-through;
+
+    }
+    ul li.check::before{
+        background-image: url(images/checked.png);
+    }
+
+    li span{
+        position: absolute;
+        content: '';
+        width: 30px;
+        height: 30px;
+        text-align: center;
+        /* background-color: rebeccapurple; */
+        right: 0;
+        top: 5px;
+        font-size: x-large;
+        margin-right: -30px;
+        transition: all 300ms;
+
+    }
+    
+
 }
