--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ li span:hover{
 }
 
 
-@media (max-width: 600px ) {
+@media (min-width: 600px ) {
     
     body{
         caret-color: transparent;
